--- a/index.html
+++ b/index.html
@@ -5,11 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="index.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
 </head>
 
 <body>
+    <div class="Person">
+        <h2>Person's Data</h2>
+        <form id="form">
+            <label for="first-name">First name:</label><br>
+            <input type="text" id="first-name" name="first-name" value="name"><br>
+            <label for="last-name">Last name:</label><br>
+            <input type="text" id="las-tname" name="last-name" value="last name"><br>
+            <label for="dob">Date of birth:</label><br>
+            <input type="text" id="dob" name="dob" value="date of birth"><br><br>
 
+            <button> Submit</button>
+        </form>
+    </div>
+    <div class="Perent">
+        <h2>Person's Data</h2>
+        <form id="form">
+            <label for="first-name">First name:</label><br>
+            <input type="text" id="first-name" name="first-name" value="name"><br>
+            <label for="last-name">Last name:</label><br>
+            <input type="text" id="las-tname" name="last-name" value="last name"><br>
+            <label for="dob">Date of birth:</label><br>
+            <input type="text" id="dob" name="dob" value="date of birth"><br><br>
+
+            <button> Submit</button>
+        </form>
+    </div>
+    <div class="Child">
+        <h2>Child</h2>
+        <form id="form">
+            <label for="first-name">First name:</label><br>
+            <input type="text" id="first-name" name="first-name" value="name"><br>
+            <label for="last-name">Last name:</label><br>
+            <input type="text" id="las-tname" name="last-name" value="last name"><br>
+            <label for="dob">Date of birth:</label><br>
+            <input type="text" id="dob" name="dob" value="date of birth"><br><br>
+
+            <button> Submit</button>
+        </form>
+    </div>
+    <div class="Sibiling">
+        <h2>Sibiling</h2>
+        <form id="form">
+            <label for="first-name">First name:</label><br>
+            <input type="text" id="first-name" name="first-name" value="name"><br>
+            <label for="last-name">Last name:</label><br>
+            <input type="text" id="las-tname" name="last-name" value="last name"><br>
+            <label for="dob">Date of birth:</label><br>
+            <input type="text" id="dob" name="dob" value="date of birth"><br><br>
+
+            <button> Submit</button>
+        </form>
+    </div>
+
+
+
+
+
+
+    <div id="family-tree">
+
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
