--- a/card.html
+++ b/card.html
@@ -20,3 +20,36 @@
 </body>
 
 </html>
+
+
+
+
+<div class="Child">
+    <h2>Child</h2>
+    <form id="form">
+        <label for="first-name">First name:</label><br>
+        <input type="text" id="first-name" name="first-name" value="name"><br>
+        <label for="last-name">Last name:</label><br>
+        <input type="text" id="las-tname" name="last-name" value="last name"><br>
+        <label for="dob">Date of birth:</label><br>
+        <input type="text" id="dob" name="dob" value="date of birth"><br><br>
+
+        <button> Submit</button>
+    </form>
+</div>
+
+<!-- 
+`
+<div class="theForm">
+    <h2>Form</h2>
+    <form id="theForm">
+        <label for="formName">First name:</label><br>
+        <input type="text" name="formName" value=id=${"formName"}><br>
+        <label for="formLastName">Last name:</label><br>
+        <input type="text" id="formLastName" name="formLastName" value="formLastName"><br>
+        <label for="formDob">Date of birth:</label><br>
+        <input type="text" id="formDob" name="formDob" value="date of birth"><br><br>
+
+        <button> Submit</button>
+    </form>
+</div>` -->
