--- a/card.html
+++ b/card.html
@@ -24,8 +24,8 @@
 
 
 
-<div class="Child">
-    <h2>Child</h2>
+<div class="card">
+    <h2>card</h2>
     <form id="form">
         <label for="first-name">First name:</label><br>
         <input type="text" id="first-name" name="first-name" value="name"><br>
