--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="main">
         <div class="Person">
             <h2>Person's Data</h2>
             <form id="personForm">
@@ -21,10 +21,12 @@
                 <label for="dob">Date of birth:</label><br>
                 <input type="text" id="dob" name="dob" value="date of birth"><br><br>
                 <button class="submit"> Submit</button>
-                <button class="addChild"> Add Child</button>
-                <button class="addParent"> Add Parent</button>
-                <button class="addSibling"> Add Sibling</button>
             </form>
+        </div>
+        <div class="buttons">
+            <button class="addChild"> Add Child</button>
+            <button class="addParent"> Add Parent</button>
+            <button class="addSibling"> Add Sibling</button>
         </div>
         <!-- container for child -->
         <div id="childForm">
