--- a/index.html
+++ b/index.html
@@ -1,69 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="index.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <main class="main">
-        <div class="Person">
-            <h2>Person's Data</h2>
-            <form id="personForm">
-                <label for="first-name">First name:</label><br>
-                <input type="text" id="first-name" name="first-name" value="name"><br>
-                <label for="last-name">Last name:</label><br>
-                <input type="text" id="last-name" name="last-name" value="last name"><br>
-                <label for="dob">Date of birth:</label><br>
-                <input type="text" id="dob" name="dob" value="date of birth"><br><br>
-                <button class="submit"> Submit</button>
-            </form>
-        </div>
-        <div class="buttons">
-            <button class="addChild"> Add Child</button>
-            <button class="addParent"> Add Parent</button>
-            <button class="addSibling"> Add Sibling</button>
-        </div>
-        <!-- container for child -->
-        <div id="childForm">
-
-        </div>
-        <!-- container for sibling -->
-        <div id="siblingForm">
-
-        </div>
-        <!-- container for parent -->
-        <div id="parentForm">
-
-        </div>
-
-        <div id="family-tree">
-
-        </div>
+      <div class="Person">
+        <h2>Person's Data</h2>
+        <form id="personForm">
+          <label for="first-name">First name:</label><br />
+          <input
+            type="text"
+            id="first-name"
+            name="first-name"
+            value="name"
+          /><br />
+          <label for="last-name">Last name:</label><br />
+          <input
+            type="text"
+            id="last-name"
+            name="last-name"
+            value="last name"
+          /><br />
+          <label for="dob">Date of birth:</label><br />
+          <input
+            type="text"
+            id="dob"
+            name="dob"
+            value="date of birth"
+          /><br /><br />
+          <button class="submit">Submit</button>
+        </form>
+      </div>
+      <div class="buttons">
+        <button class="addChild">Add Child</button>
+        <button class="addParent">Add Parent</button>
+        <button class="addSibling">Add Sibling</button>
+      </div>
+      <!-- container for child form on the page-->
+      <div id="childForm"></div>
+      <!-- container for sibling form on the page -->
+      <div id="siblingForm"></div>
+      <!-- container for parent form on the page-->
+      <div id="parentForm"></div>
     </main>
+    <!-- asides Information, after form submited, on the page -->
     <aside>
-        <div class="card">
-            <h2>card</h2>
-            <form id="form">
-                <label for="first-name">First name:</label><br>
-                <div>${name}</div>
-                <br>
-                <label for="last-name">Last name:</label><br>
-                <div>${last-name}</div>
-                <br>
-                <label for="dob">Date of birth:</label><br>
-                <div>${dob}</div>
-                <br><br>
-            </form>
-        </div>
+      <div id="cards"></div>
+      <div id="childCards"></div>
+      <div id="siblingCards"></div>
+      <div id="parentCard"></div>
     </aside>
-
-
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
